mudanças no estilo da página em geral

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -111,6 +111,7 @@ header {
   .favorites {
     font-size: 1.2rem;
     color: #FFFFFF;
+    margin-right: 15%;
   }
 
   .favorites a, a:hover, a:visited {
